DDP-5815: fix fields alignment, font-size and label

--- a/ddp-workspace/projects/ddp-osteo/src/styles/family-history.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles/family-history.scss
@@ -201,6 +201,10 @@
             font-size: 1.1rem;
             margin: 0;
         }
+
+        .mat-input-element {
+          font-size: 1.1rem;
+        }
     }
 
     &__save_activity {
